# isaac_ros_depth_segmentation

./: .gitattributes  README.md
docs/: bi3d-example.md  tutorial-bi3d-freespace-isaac-sim.md  tutorial-bi3d-freespace-realsense.md  tutorial-bi3d-isaac-sim.md
gxf_isaac_bi3d/: CMakeLists.txt  package.xml
gxf_isaac_bi3d/gxf/extensions/bi3d/: bi3d.cpp
gxf_isaac_bi3d/gxf/extensions/bi3d/components/: bi3d_depthview.cpp  bi3d_depthview.hpp  bi3d_inference.cpp  bi3d_inference.hpp  bi3d_postprocessor.cpp  bi3d_postprocessor.cu  bi3d_postprocessor.cu.hpp  bi3d_postprocessor.hpp  bi3d_postprocessor_utils.hpp
gxf_isaac_bi3d/gxf/extensions/bi3d/inference/: Bi3D.cpp  Bi3D.h  Bi3DPostProcessor.cpp  Bi3DPreProcessor.cpp  Bi3D_detail.cpp  Bi3D_detail.hpp  Model.h
isaac_ros_bi3d/: CMakeLists.txt  package.xml
isaac_ros_bi3d/config/: bi3d_node.yaml  isaac_ros_bi3d_isaac_sim.rviz  isaac_ros_bi3d_zed.rviz
isaac_ros_bi3d/gxf/: CMakeLists.txt
isaac_ros_bi3d/gxf/bi3d/: CMakeLists.txt
isaac_ros_bi3d/gxf/bi3d/3dv/include/cv/bi3d/: Bi3D.h
isaac_ros_bi3d/gxf/bi3d/3dv/src/: Bi3D.cpp  Bi3DPostProcessor.cpp  Bi3DPreProcessor.cpp  Bi3D_detail.cpp  Bi3D_detail.h
isaac_ros_bi3d/gxf/bi3d/bi3d_postprocessor/: CMakeLists.txt  bi3d_postprocessor_extension.cpp  bi3d_postprocessor_utils.hpp
isaac_ros_bi3d/gxf/bi3d/bi3d_postprocessor/bi3d_postprocess/: bi3d_message_splitter.cpp  bi3d_message_splitter.hpp  bi3d_postprocessor.hpp
isaac_ros_bi3d/gxf/bi3d/cvcore/src/inferencer/tensorrt/: TensorRTUtils.cpp
isaac_ros_bi3d/gxf/bi3d/extensions/bi3d/: Bi3D.cpp  Bi3D.hpp  Bi3DRegistry.cpp
isaac_ros_bi3d/gxf/bi3d/extensions/tensor_ops/: TensorOps.cpp
isaac_ros_bi3d/gxf/bi3d_postprocessor/: CMakeLists.txt
isaac_ros_bi3d/gxf/bi3d_postprocessor/bi3d_postprocess/: bi3d_postprocessor.cpp  bi3d_postprocessor.cu.cpp  bi3d_postprocessor.cu.hpp
isaac_ros_bi3d/gxf/extensions/bi3d/: bi3d.cpp
isaac_ros_bi3d/gxf/extensions/bi3d/components/: bi3d_depthview.cpp  bi3d_depthview.hpp  bi3d_inference.cpp  bi3d_inference.hpp  bi3d_postprocessor.cpp  bi3d_postprocessor.cu.hpp  bi3d_postprocessor.hpp  bi3d_postprocessor_utils.hpp
isaac_ros_bi3d/gxf/extensions/bi3d/inference/: Bi3D.cpp  Bi3D.h  Bi3DPostProcessor.cpp  Bi3DPreProcessor.cpp  Bi3D_detail.cpp  Bi3D_detail.hpp  Model.h
isaac_ros_bi3d/include/isaac_ros_bi3d/: bi3d_node.hpp
isaac_ros_bi3d/launch/: isaac_ros_bi3d.launch.py  isaac_ros_bi3d_core.launch.py  isaac_ros_bi3d_hawk.launch.py  isaac_ros_bi3d_isaac_sim.launch.py  isaac_ros_bi3d_realsense.launch.py  isaac_ros_bi3d_zed.launch.py
isaac_ros_bi3d/scripts/: isaac_ros_bi3d_visualizer.py
isaac_ros_bi3d/src/: bi3d_node.cpp
isaac_ros_bi3d/test/: bi3d_node_test.cpp  camera_info.json  dummy_featnet_model.onnx  dummy_segnet_model.onnx  isaac_ros_bi3d_test.py
isaac_ros_bi3d_freespace/: CMakeLists.txt  package.xml
isaac_ros_bi3d_freespace/config/: freespace_segmentation_node.yaml  isaac_ros_bi3d_freespace_isaac_sim.rviz
isaac_ros_bi3d_freespace/include/isaac_ros_bi3d_freespace/: freespace_segmentation_node.hpp
isaac_ros_bi3d_freespace/launch/: isaac_ros_bi3d_freespace.launch.py  isaac_ros_bi3d_freespace_isaac_sim.launch.py  isaac_ros_bi3d_freespace_realsense.launch.py
isaac_ros_bi3d_freespace/src/: freespace_segmentation_node.cpp
isaac_ros_bi3d_freespace/test/: isaac_ros_freespace_segmentation_pol.py
isaac_ros_nitros_bi3d_inference_param_array_type/: CMakeLists.txt  package.xml
isaac_ros_nitros_bi3d_inference_param_array_type/include/isaac_ros_nitros_bi3d_inference_param_array_type/: nitros_bi3d_inference_param_array.hpp
isaac_ros_nitros_bi3d_inference_param_array_type/src/: nitros_bi3d_inference_param_array.cpp
isaac_ros_nitros_bi3d_inference_param_array_type/test/: isaac_ros_nitros_bi3d_inference_param_array_type_test_pol.py
isaac_ros_nitros_bi3d_inference_param_array_type/test/config/: test_forward_node.yaml
isaac_ros_nitros_bi3d_inference_param_array_type/test/src/: nitros_bi3d_inference_param_array_forward_node.cpp
resources/rosbags/bi3dnode_rosbag/: bi3dnode_rosbag_0.db3  metadata.yaml
